[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "invoice-agent-ai"
version = "0.1.0"
description = "AI-powered invoice processing agent: extract fields, validate totals, match POs, flag anomalies."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["invoice", "anthropic", "claude", "ai", "ocr", "accounting"]

dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.7",
    "pypdf>=4.0",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
invoice-agent = "invoice_agent.cli:main"

[project.urls]
Repository = "https://github.com/example/invoice-agent-ai"

[tool.hatch.build.targets.wheel]
packages = ["invoice_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
